# workflows-1

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg  workspace.yaml
.github/workflows/: main.yml
workflows/: __init__.py  constants.py  repository.py
workflows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workflows/collect_save_and_upload_data/composite_solids/: get_files_from_ftp_and_save_to_s3.py
workflows/collect_save_and_upload_data/solids/: collect_files_to_download.py  crawler_parser.py  dowloanda_file_from_ftp.py  download_file_from_s3.py  unzip.py  uploading_files_to_ftp.py  uploading_files_to_s3.py
workflows/pipelines/: my_pipeline.py  rerun_solids_after_download_file_from_s3.py
workflows/utils/: create_dir.py
workflows_tests/test_pipelines/: test_my_pipeline.py
workflows_tests/test_solids/: test_crawler_parser.py  test_download_file_from_s3.py  test_hello.py
