[tool.poetry]
name = "workflows"
version = "0.1.0"
description = ""
authors = ["Harris Tzovanakis <me@drjova.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.12.5"

[tool.poetry.dev-dependencies]
dagit = "^0.12.5"
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
